2011-03-01  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_directory_entries => avt.directory_entries):
	new function

2011-02-27  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (fill_audio, avt_wait_audio_end):
	send an user-event when sound has ended
	avtinternals.h, avatar.c (avt_analyze_event): made extern

	* avatar.c (avt_navigate):
	end of sound triggers stop or fastforward key, if present

2011-02-24  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.ncr): renamed from utf8.xml

2011-02-23  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/akfavatar.pas (LoadRawSoundData, AddRawSoundData):
	new functions

2011-02-22  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-audio.c (avt_pause_audio): new function
	lua/lua-avt.c (lavt_pause_audio => avt.pause_audio): new function
	pascal/akfavatar.pas (PauseSound): new function

	* lua/lua-avt.c (check_avt_bool_t)[to_avt_bool_t]:
	new function, new macro
	many functions adapted

	* lua/lua-avt.c (lavt_chdir => avt.set_directory):
	nil or an empty sting is accepted and does nothing

2011-02-12  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h (avta_load_vorbis_file, avta_load_vorbis_data):
	new functions
	avtvorbis.c: new file
	renamed lua/avt-vorbis.c -> lua/akfavatar-vorbis.c

	* akfavatar.h, avatar.c, avatar-audio.c:
	change definitions of avt_image_t and avt_audio_t

2011-02-08  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-audio.c (avt_add_raw_audio_data): new function
	avatar-audio.c (avt_load_raw_audio_data): adapted
	lua/avt-vorbis.c (load_vorbis): adapted

2011-02-04  Andreas K. Foerster  <info@akfoerster.de>

	* stb_vorbis.c, lua/avt-vorbis.c: new files

	* lua/akfavatar/avtdemo.lua: optional support for Ogg Vorbis

2011-02-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_load_audio_file, lavt_load_audio_string):
	on error return nil and an error message
