@@ -1,3 +1,8 @@
+2011-03-02  Andreas K. Foerster  <info@akfoerster.de>
+
+	* lua/lua-avt.c (lavt_entry_type => avt.entry_type):
+	new function
+
 2011-03-01  Andreas K. Foerster  <info@akfoerster.de>
 
 	* lua/lua-avt.c (lavt_directory_entries => avt.directory_entries):
